--- a/MeetingRooms/Base.lproj/Main.storyboard
+++ b/MeetingRooms/Base.lproj/Main.storyboard
@@ -22,13 +22,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.22352941179999999" green="0.6705882353" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="91E-ah-GHS"/>
                     <navigationItem key="navigationItem" title="Meeting Rooms" id="qOB-kx-lbd">
                         <barButtonItem key="rightBarButtonItem" title="Chat" id="fdi-Ey-fEb"/>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vgG-uw-4TO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1076" y="863"/>
+            <point key="canvasLocation" x="1055" y="862"/>
         </scene>
         <!--Login-->
         <scene sceneID="tne-QT-ifu">
@@ -155,7 +156,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="1zd-2v-hmA">
-                                <rect key="frame" x="30" y="253" width="315" height="50.5"/>
+                                <rect key="frame" x="30" y="253.5" width="315" height="50.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HC2-WE-Utc">
                                         <rect key="frame" x="0.0" y="0.0" width="315" height="20.5"/>
@@ -172,7 +173,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="tRE-iA-F9v">
-                                <rect key="frame" x="30" y="323.5" width="315" height="50.5"/>
+                                <rect key="frame" x="30" y="324" width="315" height="80.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zlp-de-kEy">
                                         <rect key="frame" x="0.0" y="0.0" width="315" height="20.5"/>
@@ -186,10 +187,16 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="123456" borderStyle="roundedRect" placeholder="Re-enter password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="BXu-p9-Wd0">
+                                        <rect key="frame" x="0.0" y="50.5" width="315" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jga-xH-igU">
-                                <rect key="frame" x="30" y="417.5" width="315" height="30"/>
+                                <rect key="frame" x="30" y="447.5" width="315" height="30"/>
                                 <color key="backgroundColor" red="0.56862745100000001" green="0.75686274509999996" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="SIGN UP"/>
                             </button>
@@ -228,6 +235,7 @@
                         <outlet property="passwordLabel" destination="zlp-de-kEy" id="DQr-N8-Ebj"/>
                         <outlet property="passwordTextField" destination="xzk-4G-ejc" id="jY1-F1-doB"/>
                         <outlet property="profileImageView" destination="EzN-cI-S5s" id="Sdn-Wk-Acz"/>
+                        <outlet property="repeatedPasswordTextField" destination="BXu-p9-Wd0" id="Fjc-uB-Iez"/>
                         <outlet property="signUpButton" destination="jga-xH-igU" id="Prf-v1-MTA"/>
                     </connections>
                 </viewController>
@@ -264,7 +272,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="GRq-jH-bYC" kind="relationship" relationship="rootViewController" id="bFX-o1-EeJ"/>
+                        <segue destination="GRq-jH-bYC" kind="relationship" relationship="rootViewController" id="K3m-1k-TRZ"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Oey-W4-qqm" userLabel="First Responder" sceneMemberID="firstResponder"/>
