--- a/MeetingRooms/Base.lproj/DashboardStoryboard.storyboard
+++ b/MeetingRooms/Base.lproj/DashboardStoryboard.storyboard
@@ -33,7 +33,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ylS-jk-blV" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="11B-1L-20x">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="11B-1L-20x">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
