Add navigation bar to view controllers

--- a/MeetingRooms/Base.lproj/SettingsStoryboard.storyboard
+++ b/MeetingRooms/Base.lproj/SettingsStoryboard.storyboard
@@ -33,7 +33,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Et6-cR-38Q" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="NTU-rV-8ok">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="NTU-rV-8ok">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
