--- a/MeetingRooms/Base.lproj/MeetingRoomsListStoryboard.storyboard
+++ b/MeetingRooms/Base.lproj/MeetingRoomsListStoryboard.storyboard
@@ -46,32 +46,40 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" verticalHuggingPriority="252" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="GHe-md-WgT">
-                                                    <rect key="frame" x="147" y="48.5" width="210" height="70"/>
+                                                    <rect key="frame" x="147" y="48.5" width="210" height="60.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Morning" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="45i-0i-X4N">
-                                                            <rect key="frame" x="0.0" y="25" width="63.5" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="10" width="63.5" height="40.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <color key="textColor" red="0.4039215686" green="0.43921568630000002" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Noon" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U6g-2K-40Q">
-                                                            <rect key="frame" x="86" y="25" width="41.5" height="20.5"/>
+                                                            <rect key="frame" x="86" y="10" width="41.5" height="40.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <color key="textColor" red="0.4039215686" green="0.43921568630000002" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Evening" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dGt-4j-5H7">
-                                                            <rect key="frame" x="149.5" y="25" width="60.5" height="20.5"/>
+                                                            <rect key="frame" x="149.5" y="10" width="60.5" height="40.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <color key="textColor" red="0.4039215686" green="0.43921568630000002" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
+                                                    <constraints>
+                                                        <constraint firstAttribute="bottom" secondItem="45i-0i-X4N" secondAttribute="bottom" constant="10" id="9oE-xO-atI"/>
+                                                        <constraint firstItem="dGt-4j-5H7" firstAttribute="top" secondItem="GHe-md-WgT" secondAttribute="top" constant="10" id="AxM-Sy-jUH"/>
+                                                        <constraint firstAttribute="bottom" secondItem="dGt-4j-5H7" secondAttribute="bottom" constant="10" id="KWT-D9-UZ0"/>
+                                                        <constraint firstAttribute="bottom" secondItem="U6g-2K-40Q" secondAttribute="bottom" constant="10" id="Xbr-4P-3S8"/>
+                                                        <constraint firstItem="45i-0i-X4N" firstAttribute="top" secondItem="GHe-md-WgT" secondAttribute="top" constant="10" id="YuM-0p-qQk"/>
+                                                        <constraint firstItem="U6g-2K-40Q" firstAttribute="top" secondItem="GHe-md-WgT" secondAttribute="top" constant="10" id="opF-FR-KqA"/>
+                                                    </constraints>
                                                 </stackView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailingMargin" secondItem="GHe-md-WgT" secondAttribute="trailing" constant="10" id="0Ko-29-msI"/>
-                                                <constraint firstItem="GHe-md-WgT" firstAttribute="bottom" secondItem="eiG-Wy-Ea8" secondAttribute="bottomMargin" constant="20" id="10i-Kp-qHH"/>
+                                                <constraint firstItem="GHe-md-WgT" firstAttribute="bottom" secondItem="eiG-Wy-Ea8" secondAttribute="bottomMargin" constant="10" id="10i-Kp-qHH"/>
                                                 <constraint firstItem="qw3-bQ-ztK" firstAttribute="leading" secondItem="h7A-ec-0ae" secondAttribute="trailing" constant="10" id="1pt-lN-BUM"/>
                                                 <constraint firstAttribute="bottom" secondItem="h7A-ec-0ae" secondAttribute="bottom" id="6Ng-dm-Fza"/>
                                                 <constraint firstItem="qw3-bQ-ztK" firstAttribute="top" secondItem="eiG-Wy-Ea8" secondAttribute="topMargin" constant="10" id="6a6-wc-kAX"/>
